Wed Mar 24 17:10:55 2004  George Lebl <jirka@5z.com>

	* src/calc.c: fix printing of functions

Wed Mar 24 16:39:18 2004  George Lebl <jirka@5z.com>

	* src/eval.[ch], src/calc.c: Add basic arithmethic operations on
	  functions, for example sin^2 will make a new function that
	  does sin(x)^2, so you can do say "LinePlot(sin^2)", or
	  more uselessly "sin^2 call (x)" 

	* src/geniustests.txt: update the tests a bit

	* src/funclib.c, src/eval.[ch]: Add "function return" to some 
	  1 value functions such as exp, so that e.g. exp(sin) returns
	  a function that does exp(sin(x)).  Currently supported are:
	  conj, sin, cos, sinh, cosh, tan, atan, sqrt, exp, ln, log2, log10,
	  round, floor, ceil, trunc, float, Numerator, Denominator, Re and
	  Im.

	* src/graphing.c: Fix LinePlot function (we messed up the replot
	  data), also if the function returns functions, then evaluate those
	  instead (don't recurse further though)

Wed Mar 24 11:04:26 2004  George Lebl <jirka@5z.com>

	* doc/manual.txt, lib/linear_algebra/*.gel: fixup some documentation

	* lib/**/Makefile.am: fix installation of loader.gel into the
	  correct directory (not into /bin/ whoops :)

Tue Mar 23 15:21:12 2004  George Lebl <jirka@5z.com>

	* src/lexer.l, src/parse.y, src/eval.[ch], src/calc.c:  Add
	  := (E_DEFEQUALS) operator which is never translated to ==.
	  Also use E_DEFEQUALS on function definitions always so that
	  they don't get translated (that would just be plain
	  confusing).

	* src/geniustests.txt: add tests for :=

	* doc/manual.txt: update for the := operator

Tue Mar 23 14:35:09 2004  George Lebl <jirka@5z.com>

	* src/Makefile.am, src/gnome-genius.[ch], src/calc.c, src/eval.c:
	  Cleanup, print version in title, make titles more sane + 
	  some string changes, a bit of renaming, add gnome-genius.h header
	  to export the current setup and update some copyright notices

	* src/graphing.c: fixup wrt the header, add status icons next to