@@ -17,6 +17,7 @@ LIBGNOMEUI_REQUIRED=2.0.0
 LIBGLADE_REQUIRED=1.99.2
 LIBGNOME_REQUIRED=2.0.0
 GTK_REQUIRED=2.0.0
+GLIB_REQUIRED=2.0.0
 GTKSOURCEVIEW_REQUIRED=0.3.0
 
 dnl ===============================================================================
@@ -81,23 +82,28 @@ AC_CHECK_LIB(mpfr, mpfr_init,[
 	AC_MSG_WARN([*** MPFR Library not found ***])],"$GMP_LIB")
 AC_SUBST(MPFR_LIB)
 
-AC_PATH_PROG(GCONFTOOL, gconftool-2)
-dnl Specify the gconf configuration source,
-dnl default to xml::$(sysconfdir)/gconf/gconf.xml.defaults
-
-GCONF_CONFIG_SOURCE=
-
-AC_ARG_ENABLE(gconf-source, [  --enable-gconf-source=sourceaddress Where to install schema files.], GCONF_CONFIG_SOURCE=$enable_gconf_source,)
-if test "x$GCONF_CONFIG_SOURCE" = "x"; then
-        GCONF_CONFIG_SOURCE="xml::\${sysconfdir}/gconf/gconf.xml.defaults"
-fi
-
-AC_SUBST(GCONF_CONFIG_SOURCE)
-AC_SUBST(INSTALL_GCONF_CONFIG_SOURCE)
+# No schemas yet so ignore this section for now
+#AC_PATH_PROG(GCONFTOOL, gconftool-2)
+#dnl Specify the gconf configuration source,
+#dnl default to xml::$(sysconfdir)/gconf/gconf.xml.defaults
+#
+#GCONF_CONFIG_SOURCE=
+#
+#AC_ARG_ENABLE(gconf-source, [  --enable-gconf-source=sourceaddress Where to install schema files.], GCONF_CONFIG_SOURCE=$enable_gconf_source,)
+#if test "x$GCONF_CONFIG_SOURCE" = "x"; then
+#        GCONF_CONFIG_SOURCE="xml::\${sysconfdir}/gconf/gconf.xml.defaults"
+#fi
+#
+#AC_SUBST(GCONF_CONFIG_SOURCE)
+#AC_SUBST(INSTALL_GCONF_CONFIG_SOURCE)
 
 AC_ARG_ENABLE(gtksourceview,
 [  --enable-gtksourceview  Use GtkSourceView library],
 use_gtksourceview="$enableval",use_gtksourceview=yes)
+
+#AC_ARG_ENABLE(gnomegui,
+#[  --enable-gnomegui  Use GtkSourceView library],
+#use_gnomegui="$enableval",use_gnomegui=yes)
 
 GENIUS_MODULES="gtk+-2.0 >= $GTK_REQUIRED libgnome-2.0 >= $LIBGNOME_REQUIRED libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED vte >= $VTE_REQUIRED gtksourceview-1.0 >= $GTKSOURCEVIEW_REQUIRED libglade-2.0 >= $LIBGLADE_REQUIRED"
 GENIUS_MODULES_NOSRCVIEW="gtk+-2.0 >= $GTK_REQUIRED libgnome-2.0 >= $LIBGNOME_REQUIRED libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED vte >= $VTE_REQUIRED libglade-2.0 >= $LIBGLADE_REQUIRED"
@@ -117,6 +123,11 @@ AC_SUBST(GENIUS_LIBS)
 PKG_CHECK_MODULES(GUI, gtk+-2.0 >= $GTK_REQUIRED libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED libglade-2.0 >= $LIBGLADE_REQUIRED)
 AC_SUBST(GUI_CFLAGS)
 AC_SUBST(GUI_LIBS)
+
+# Used for the 'genius' binary
+PKG_CHECK_MODULES(GENIUS_NOGUI, glib-2.0 >= $GLIB_REQUIRED gmodule-2.0 >= $GLIB_REQUIRED)
+AC_SUBST(GENIUS_NOGUI_CFLAGS)
+AC_SUBST(GENIUS_NOGUI_LIBS)
 
 AC_CHECK_LIB(popt, poptGetArgs, [POPT_LIBS="-lpopt"],
 AC_MSG_ERROR([popt is required to build genius.
